<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.korewang.shuishui.InitActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/on_item0" />
    <item
        android:id="@+id/on_item1"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/on_item1" />
    <item
        android:id="@+id/on_item2"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/on_item2" />
    <item
        android:id="@+id/on_item3"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/on_item3" />
    <item
        android:id="@+id/on_item4"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/on_item4" />

</menu>
