<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:id="@+id/rootly"
    tools:context="com.korewang.shuishui.activitys.MultipleThreadDownLoaderActivity" >
	
	
	<com.korewang.shuishui.widget.HeaderView
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:id="@+id/headerDownView" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/path" />

    <EditText
        android:id="@+id/path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="http://172.16.130.4:8080/ServletTest/Kalimba.mp3"
        android:ems="10" >
        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/downloadbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/downbutton" />

        <Button
            android:id="@+id/stopbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_weight="1"
            android:text="@string/stopbutton" />
        
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="18dp" />

    <TextView
        android:id="@+id/resultView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="0%" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">

        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="username"
            android:ems="10" />
        <EditText
            android:id="@+id/userpsd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="userpassword"
            android:ems="10" />
    </LinearLayout>
     <Button
            android:id="@+id/login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Servlet" />
     <Button
            android:id="@+id/getcontact"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="获取联系人" />
     
</LinearLayout>
